@@ -20,12 +20,12 @@ repositories {
 }
 
 dependencies {
-    compile 'commons-dbcp:commons-dbcp:1.4'
+    compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.5.11'
-    compile 'org.springframework:spring-beans:5.1.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.4.RELEASE'
+    compile 'org.apache.httpcomponents:httpclient:4.5.12'
+    compile 'org.springframework:spring-beans:5.1.5.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.5.RELEASE'
     compile 'com.io7m.xom:xom:1.2.10'
     compile fileTree(dir: 'lib', include: '*.jar')
 }
