@@ -1,3 +1,6 @@
+2020-05-27
+  fixed Ensembl query for dog
+
 2020-04-16
   added logging of xdb ids
   added script run_ensembl.sh that was used on PROD but never had been committed to git
